# shubham-api-manager

./: .env.example  .env.production  .gitignore  README.md  docker-compose.media-processor.yml  docker-compose.scylladb.yml  package-lock.json  package.json  vitest.config.js
config/: models.js
cpp-system/: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  PERFORMANCE_RESULTS.md  README.md  build_data_generator.sh  build_integrated.sh  build_scylla_generator.sh  build_simple_generator.sh  build_ultra_10m.sh  build_ultra_generator.sh  conanfile.py  docker-compose.yml  scylla_data_generator.cpp  simple-build.sh  simple_data_generator  simple_data_generator.cpp  simple_test.cpp  test_api_data  test_api_data.cpp  test_compile  test_compile.cpp  test_compile_cache.cpp  test_compile_error_handling.cpp  test_database_compile  test_database_compile.cpp  test_logger  test_logger_only.cpp  test_network_compile.cpp  test_real_data  test_real_data.cpp  test_security_compile  test_security_compile.cpp  ultra_10m_rps_simple.cpp  ultra_10m_rps_system  ultra_10m_rps_system.cpp  ultra_distributed_generator.cpp  ultra_integrated_generator  (+2 more)
cpp-system/.github/workflows/: ci.yml
cpp-system/config/: ab_tests.json  database.conf  feature_flags.json  gpu-compute.conf  network-protocol.conf  performance-monitor.conf  prometheus.yml  routes.json  ultra-cpp.conf
cpp-system/docs/: API_DOCUMENTATION.md  CONFIGURATION_SERVICE_DISCOVERY.md  ERROR_HANDLING_RESILIENCE.md  INTEGRATION_EXAMPLES.md  PERFORMANCE_OPTIMIZATION_TUNING.md  PERFORMANCE_TUNING_GUIDE.md  TROUBLESHOOTING_GUIDE.md
cpp-system/examples/: CMakeLists.txt  config_service_discovery_demo.cpp  database_demo.cpp  error_handling_demo.cpp  gpu_compute_demo.cpp  lockfree_demo.cpp  memory_demo.cpp  network_protocol_demo.cpp  performance_monitor_demo.cpp  performance_optimization_demo.cpp  security_demo.cpp
cpp-system/include/api-gateway/: fast_api_gateway.hpp
cpp-system/include/cache/: ultra_cache.hpp
cpp-system/include/common/: circuit_breaker.hpp  config_manager.hpp  degradation_manager.hpp  dynamic_routing.hpp  error_handling.hpp  fallback_manager.hpp  feature_flags.hpp  health_check.hpp  logger.hpp  resilience_system.hpp  service_registry.hpp  simple_logger.hpp  types.hpp
cpp-system/include/database/: database_connector.hpp
cpp-system/include/gpu-compute/: gpu_compute_engine.hpp
cpp-system/include/integration/: event_bridge.hpp  http_proxy.hpp  monitoring_integration.hpp  session_manager.hpp
cpp-system/include/lockfree/: README.md  atomic_ref_count.hpp  lockfree.hpp  lockfree_hash_table.hpp  lockfree_hash_table_impl.hpp  lockfree_lru_cache.hpp  lockfree_lru_cache_impl.hpp  mpmc_ring_buffer.hpp
cpp-system/include/memory/: lock_free_allocator.hpp  memory.hpp  mmap_allocator.hpp  numa_allocator.hpp  rcu_smart_ptr.hpp
cpp-system/include/network/: dpdk_network.hpp  http_protocol.hpp  load_balancer.hpp  tcp_connection.hpp
cpp-system/include/performance-monitor/: adaptive_tuning.hpp  cache_optimization.hpp  compiler_optimization.hpp  cpu_affinity.hpp  hardware_counters.hpp  metrics_collector.hpp  performance_monitor.hpp  prometheus_exporter.hpp  slo_monitor.hpp
cpp-system/include/security/: audit_logger.hpp  jwt_validator.hpp  rate_limiter.hpp  request_sanitizer.hpp
cpp-system/include/stream-processor/: anomaly_detector.hpp  event_ingestion.hpp  stream_processor.hpp  windowed_aggregator.hpp
cpp-system/scripts/: build.sh  setup-dev-env.sh
cpp-system/src/api-gateway/: CMakeLists.txt  fast_api_gateway.cpp  main.cpp
cpp-system/src/cache/: CMakeLists.txt  README.md  cache_benchmark.cpp  cache_service_main.cpp  lock_free_hash_table.cpp  lru_eviction.cpp  rdma_replication.cpp  ultra_cache.cpp
cpp-system/src/common/: CMakeLists.txt  circuit_breaker.cpp  config_manager.cpp  degradation_manager.cpp  dynamic_routing.cpp  error_handling.cpp  fallback_manager.cpp  feature_flags.cpp  health_check.cpp  logger.cpp  resilience_system.cpp  service_registry.cpp
cpp-system/src/data-generator/: CMakeLists.txt  main.cpp  massive_data_generator.cpp  massive_data_generator.hpp
cpp-system/src/database/: CMakeLists.txt  README.md  connection_pool.cpp  database_connector.cpp  io_uring_manager.cpp  query_cache.cpp
cpp-system/src/gpu-compute/: CMakeLists.txt  README.md  crypto_accelerator.cu  cuda_memory_pool.cu  gpu_compute_engine.cpp  gpu_service_main.cpp  image_processor.cu  ml_inference.cu
cpp-system/src/integration/: CMakeLists.txt  event_bridge.cpp  http_proxy.cpp  monitoring_integration.cpp  session_manager.cpp
cpp-system/src/lockfree/: CMakeLists.txt  hazard_pointer_system.cpp
cpp-system/src/memory/: CMakeLists.txt  README.md  lock_free_allocator.cpp  memory.cpp  mmap_allocator.cpp  numa_allocator.cpp  rcu_smart_ptr.cpp
cpp-system/src/network/: CMakeLists.txt  dpdk_network.cpp  http_protocol.cpp  load_balancer.cpp  tcp_connection.cpp
cpp-system/src/performance-monitor/: CMakeLists.txt  README.md  adaptive_tuning.cpp  cache_optimization.cpp  compiler_optimization.cpp  cpu_affinity.cpp  hardware_counters.cpp  metrics_collector.cpp  monitor_service_main.cpp  performance_monitor.cpp  prometheus_exporter.cpp  slo_monitor.cpp
cpp-system/src/security/: CMakeLists.txt  audit_logger.cpp  jwt_validator.cpp  rate_limiter.cpp  request_sanitizer.cpp
cpp-system/src/stream-processor/: CMakeLists.txt  anomaly_detector.cpp  event_handler.cpp  event_ingestion.cpp  simd_aggregator.cpp  stream_processor.cpp  stream_processor_main.cpp  windowed_aggregator.cpp  windowed_operations.cpp
cpp-system/tests/: CMakeLists.txt  README.md  test_runner.cpp
cpp-system/tests/benchmark/: benchmark_comprehensive.cpp
cpp-system/tests/cache/: CMakeLists.txt  test_cache_performance.cpp  test_ultra_cache.cpp
cpp-system/tests/chaos/: chaos_test_main.cpp  chaos_testing_framework.cpp  chaos_testing_framework.hpp
cpp-system/tests/common/: test_config_service_discovery.cpp  test_error_handling_resilience.cpp
cpp-system/tests/database/: CMakeLists.txt  test_connection_pool.cpp  test_database_connector.cpp  test_query_cache.cpp
(+523 files in other folders)
